--- a/service/pom.xml
+++ b/service/pom.xml
@@ -11,6 +11,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>service-admin</module>
+        <module>service-shf-house</module>
+
     </modules>
 
     <properties>
