小区管理模块  根据条件查询小区信息

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>service-admin</module>
         <module>service-shf-house</module>
+        <module>service-community</module>
 
     </modules>
 
