房源模块 前台首页 查询功能

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -11,6 +11,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>web-admin</module>
+        <module>web-front</module>
     </modules>
 
     <properties>
