前台首页 验证码功能 注册功能

--- a/common-utils/pom.xml
+++ b/common-utils/pom.xml
@@ -124,5 +124,11 @@
             <groupId>com.qiniu</groupId>
             <artifactId>qiniu-java-sdk</artifactId>
         </dependency>
+
+        <!--redis-->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
     </dependencies>
 </project>
