--- a/web/web-front/src/main/webapp/WEB-INF/web.xml
+++ b/web/web-front/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
 
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>classpath:spring/spring-*.xml</param-value>
+			<param-value>classpath:spring/*</param-value>
 		</init-param>
 
 	</servlet>
