--- a/service/service-admin/src/main/resources/application.properties
+++ b/service/service-admin/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-url=jdbc:mysql://localhost:3306/shf?serverTimezone=UTC
+url=jdbc:mysql://localhost:3306/shf?serverTimezone=Asia/Shanghai&rewriteBatchedStatements=true
 DriverClassName=com.mysql.cj.jdbc.Driver
 name=root
 password=root
