--- a/web/pom.xml
+++ b/web/pom.xml
@@ -24,5 +24,11 @@
             <artifactId>service-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <!--校验-->
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
     </dependencies>
 </project>
