--- a/web/web-admin/src/main/webapp/WEB-INF/web.xml
+++ b/web/web-admin/src/main/webapp/WEB-INF/web.xml
@@ -44,4 +44,15 @@
     <filter-name>CharacterEncodingFilter</filter-name>
     <url-pattern>/</url-pattern>
   </filter-mapping>
+
+  <!--配置security过滤-->
+  <filter>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
