后台管理 权限校验 安全框架 访问自定义登陆页面及权限

--- a/common-utils/pom.xml
+++ b/common-utils/pom.xml
@@ -11,6 +11,13 @@
     <packaging>jar</packaging>
 
     <dependencies>
+
+        <!-- spring security安全框架 -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+        </dependency>
+
         <!-- SpringMVC相关 -->
         <dependency>
             <groupId>org.springframework</groupId>
