后台管理 权限校验 安全框架 session共享登录 并存到缓存中

--- a/web/web-admin/pom.xml
+++ b/web/web-admin/pom.xml
@@ -30,7 +30,11 @@
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity5</artifactId>
         </dependency>
-
+        <!--spring-session 同步-->
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
